Transfer Mesh Data with Custom Normal crash when Auto Smooth is enabled #68211

Closed
opened 2019-08-04 10:06:16 +02:00 by Kinouti Takahiro · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: 67EF:CF ATI Technologies Inc. 4.5.13474 Core Profile Context 22.19.162.4

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
Transfer Mesh Data with Custom Normal crash when Auto Smooth is enabled.

Exact steps for others to reproduce the error

  1. Enable Auto Smooth in default cube.
  2. Add Ico Sphere
  3. Select both mesh, and make the cube active.
  4. Run Transfer Mesh Data from Object > Relations > Transfer Mesh Data
  5. Select Custom Normals
  6. Crash
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: 67EF:CF ATI Technologies Inc. 4.5.13474 Core Profile Context 22.19.162.4 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** Transfer Mesh Data with Custom Normal crash when Auto Smooth is enabled. **Exact steps for others to reproduce the error** 1. Enable Auto Smooth in default cube. 2. Add Ico Sphere 3. Select both mesh, and make the cube active. 4. Run Transfer Mesh Data from Object > Relations > Transfer Mesh Data 5. Select Custom Normals 6. Crash

Added subscriber: @dskjal-1

Added subscriber: @dskjal-1
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Can confirm, checking...
Bastien Montagne was assigned by Philipp Oeser 2019-08-05 11:12:24 +02:00
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Asserts here, problem with cddata_masks, comment says

This should be ensured by cddata_masks we pass to code generating/giving us me_src now.

but apparently isnt...

BLI_assert(CustomData_get_layer(&me_src->pdata, CD_NORMAL) != NULL);

1  raise                                                             0x7ffff1ae6e75 
2  abort                                                             0x7ffff1ad1895 
3  data_transfer_dtdata_type_preprocess data_transfer.c        288   0x20488f4      
4  BKE_object_data_transfer_ex          data_transfer.c        1491  0x204acba      
5  BKE_object_data_transfer_mesh        data_transfer.c        1891  0x204bbaf      
6  data_transfer_exec                   object_data_transfer.c 476   0x2cf786d      
7  WM_menu_invoke_ex                    wm_operators.c         751   0x23e7f88      
8  WM_menu_invoke                       wm_operators.c         771   0x23e80dd      
9  wm_operator_invoke                   wm_event_system.c      1438  0x23c7cd3      
10 wm_operator_call_internal            wm_event_system.c      1651  0x23c8470      
11 WM_operator_name_call_ptr            wm_event_system.c      1699  0x23c8693      
12 ui_apply_but_funcs_after             interface_handlers.c   835   0x2a733c0      
13 ui_popup_handler                     interface_handlers.c   10259 0x2a8b228      
14 wm_handler_ui_call                   wm_event_system.c      623   0x23c5cb7      
15 wm_handlers_do_intern                wm_event_system.c      2699  0x23cabbc      
16 wm_handlers_do                       wm_event_system.c      2945  0x23cb857      
17 wm_event_do_handlers                 wm_event_system.c      3323  0x23cca27      
18 WM_main                              wm.c                   417   0x23c04b8      
19 main                                 creator.c              491   0x1d7ac06

@mont29: mind checking?

Asserts here, problem with `cddata_masks`, comment says > This should be ensured by cddata_masks we pass to code generating/giving us me_src now. but apparently isnt... `BLI_assert(CustomData_get_layer(&me_src->pdata, CD_NORMAL) != NULL);` ``` 1 raise 0x7ffff1ae6e75 2 abort 0x7ffff1ad1895 3 data_transfer_dtdata_type_preprocess data_transfer.c 288 0x20488f4 4 BKE_object_data_transfer_ex data_transfer.c 1491 0x204acba 5 BKE_object_data_transfer_mesh data_transfer.c 1891 0x204bbaf 6 data_transfer_exec object_data_transfer.c 476 0x2cf786d 7 WM_menu_invoke_ex wm_operators.c 751 0x23e7f88 8 WM_menu_invoke wm_operators.c 771 0x23e80dd 9 wm_operator_invoke wm_event_system.c 1438 0x23c7cd3 10 wm_operator_call_internal wm_event_system.c 1651 0x23c8470 11 WM_operator_name_call_ptr wm_event_system.c 1699 0x23c8693 12 ui_apply_but_funcs_after interface_handlers.c 835 0x2a733c0 13 ui_popup_handler interface_handlers.c 10259 0x2a8b228 14 wm_handler_ui_call wm_event_system.c 623 0x23c5cb7 15 wm_handlers_do_intern wm_event_system.c 2699 0x23cabbc 16 wm_handlers_do wm_event_system.c 2945 0x23cb857 17 wm_event_do_handlers wm_event_system.c 3323 0x23cca27 18 WM_main wm.c 417 0x23c04b8 19 main creator.c 491 0x1d7ac06 ``` @mont29: mind checking?

This issue was referenced by 592759e3d6

This issue was referenced by 592759e3d62a59e05ac1603a0ed9b22f1d4b9ff5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68211
No description provided.