Fix T68211: Transfer Mesh Data with Custom Normal crash when Auto Smooth is enabled.

Code in modifier stack ensuring requested CDLayers are provided was not
working very well for polynors in several cases:
* We cannot share the orig mesh if we have to generate pnors/lnors;
* Generating pnors without lnors was not possible.